been-mavenized/target/generated-sources/javacc/cz/cuni/mff/been/common/rsl/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
        package cz.cuni.mff.been.common.rsl;

        import java.io.PrintStream; /* Required by code generated by javacc. */
        import java.text.SimpleDateFormat;
        import java.util.List;
        import java.util.Date;
        import java.util.ArrayList;
        import java.util.regex.Pattern;
        import java.util.regex.PatternSyntaxException;

        import cz.cuni.mff.been.common.rsl.LongWithUnit;
        import cz.cuni.mff.been.common.Version;
        import cz.cuni.mff.been.softwarerepository.PackageType;

        @SuppressWarnings("all")
        class Parser implements ParserConstants {
                /* We're creating generic array. That's impossible without warnings.*/
                @SuppressWarnings("unchecked")
                private <T> Condition buildSimpleCondition(String propertyPath, int operatorKind, T value) {
                                switch (operatorKind) {
                                        case ParserConstants.EQUALS:
                                                return new EqualsCondition<T>(propertyPath, value);
                                        case ParserConstants.NOT_EQUAL:
                                                return new NotEqualCondition<T>(propertyPath, value);
                                        case ParserConstants.LESS_THAN:
                                                return new LessThanCondition<T>(propertyPath, value);
                                        case ParserConstants.LESS_OR_EQUAL:
                                                return new LessOrEqualCondition<T>(propertyPath, value);
                                        case ParserConstants.GREATER_THAN:
                                                return new GreaterThanCondition<T>(propertyPath, value);
                                        case ParserConstants.GREATER_OR_EQUAL:
                                                return new GreaterOrEqualCondition<T>(propertyPath, value);
                                        case ParserConstants.CONTAINS:
                                                return new ContainsCondition<T>(propertyPath, value);
                                        case ParserConstants.MATCHES:
                                                return new MatchesCondition<T>(propertyPath, value);
                                        case ParserConstants.DOES_NOT_MATCH:
                                                return new DoesNotMatchCondition<T>(propertyPath, value);
                                        default:
                                                assert false: "Invalid token kind.";
                                                return null; // to shut up the compiler
                                }
                }

/* ===== Grammar rules ===== */
  final public Condition Start(PrintStream printStream) throws ParseException {
        Condition c;
    c = Condition();
    jj_consume_token(0);
          {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Condition Condition() throws ParseException {
        Condition c;
    c = OrCondition();
          {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Condition OrCondition() throws ParseException {
        List<Condition> subConditions = new ArrayList<Condition>();
        Condition c;
    c = AndCondition();
          subConditions.add(c);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(OR);
      c = AndCondition();
                  subConditions.add(c);
    }
                if (subConditions.size() > 1) {
                        Condition[] subConditionsArray = new Condition[subConditions.size()];
                        {if (true) return new OrCondition(subConditions.toArray(subConditionsArray));}
                } else {
                        {if (true) return subConditions.get(0);}
                }
    throw new Error("Missing return statement in function");
  }

  final public Condition AndCondition() throws ParseException {
        List<Condition> subConditions = new ArrayList<Condition>();
        Condition c;
    if (jj_2_2(2147483647)) {
      c = SimpleCondition();
    } else if (jj_2_3(2147483647)) {
      c = QualifiedCondition();
    } else if (jj_2_4(2)) {
      c = SubCondition();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
          subConditions.add(c);
    label_2:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(AND);
      if (jj_2_6(2147483647)) {
        c = SimpleCondition();
      } else if (jj_2_7(2147483647)) {
        c = QualifiedCondition();
      } else if (jj_2_8(2)) {
        c = SubCondition();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                  subConditions.add(c);
    }
                if (subConditions.size() > 1) {
                        Condition[] subConditionsArray = new Condition[subConditions.size()];
                        {if (true) return new AndCondition(subConditions.toArray(subConditionsArray));}
                } else {
                        {if (true) return subConditions.get(0);}
                }
    throw new Error("Missing return statement in function");
  }

  final public Condition SimpleCondition() throws ParseException {
        Token t1, t2, t3;
        Condition c = null;
    t1 = jj_consume_token(PROPERTY_PATH);
    if (jj_2_9(2)) {
      t2 = jj_consume_token(EQUALS);
    } else if (jj_2_10(2)) {
      t2 = jj_consume_token(NOT_EQUAL);
    } else if (jj_2_11(2)) {
      t2 = jj_consume_token(LESS_THAN);
    } else if (jj_2_12(2)) {
      t2 = jj_consume_token(LESS_OR_EQUAL);
    } else if (jj_2_13(2)) {
      t2 = jj_consume_token(GREATER_THAN);
    } else if (jj_2_14(2)) {
      t2 = jj_consume_token(GREATER_OR_EQUAL);
    } else if (jj_2_15(2)) {
      t2 = jj_consume_token(CONTAINS);
    } else if (jj_2_16(2)) {
      t2 = jj_consume_token(MATCHES);
    } else if (jj_2_17(2)) {
      t2 = jj_consume_token(DOES_NOT_MATCH);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_18(2)) {
      t3 = jj_consume_token(LONG);
                        c = buildSimpleCondition(t1.image, t2.kind, new LongWithUnit(t3.image));
    } else if (jj_2_19(2)) {
      t3 = jj_consume_token(VERSION);
                        c = buildSimpleCondition(t1.image, t2.kind, new Version(t3.image));
    } else if (jj_2_20(2)) {
      t3 = jj_consume_token(DATE);
                        /* We parse the date by hand, because... SimpleDateFormat was
			 * tried and was found unusable.
			 *
			 * Maybe should be cleaned up and commented a bit sometimes...
			 */
                        Date date = new Date();
                        date.setYear(Integer.valueOf(t3.image.substring(0, 4)) - 1900);
                        date.setMonth(Integer.valueOf(t3.image.substring(5, 7)) - 1);
                        if (t3.image.length() > 7) {
                                date.setDate(Integer.valueOf(t3.image.substring(8, 10)));
                        } else {
                                date.setDate(0);
                        }
                        if (t3.image.length() > 10) {
                                date.setHours(Integer.valueOf(t3.image.substring(11, 13)));
                                date.setMinutes(Integer.valueOf(t3.image.substring(14, 16)));
                        } else {
                                date.setHours(0);
                                date.setMinutes(0);
                        }
                        if (t3.image.length() > 16 && t3.image.charAt(16) != 'Z'
                                        && t3.image.charAt(16) != '+' && t3.image.charAt(16) != '-') {
                                date.setSeconds(Integer.valueOf(t3.image.substring(17, 19)));
                        } else {
                                date.setSeconds(0);
                        }
                        if (t3.image.length() > 19 && t3.image.charAt(19) != 'Z'
                                        && t3.image.charAt(19) != '+' && t3.image.charAt(19) != '-') {
                                date.setTime((date.getTime() / 1000) * 1000
                                        + Integer.valueOf(t3.image.substring(20, 21)) * 100);
                        } else {
                                date.setTime((date.getTime() / 1000) * 1000);
                        }

                        if (t3.image.length() > 16) {
                                if (t3.image.charAt(t3.image.length() - 1) == 'Z') {
                                        date.setTime(date.getTime() - date.getTimezoneOffset() * 60000);
                                } else {
                                        int l = t3.image.length();
                                        int diff = Integer.valueOf(t3.image.substring(l - 2, l))
                                                + Integer.valueOf(t3.image.substring(l - 5, l - 3)) * 60;
                                        diff = diff * 60000;
                                        diff = t3.image.charAt(l - 6) == '+' ? diff : -diff;
                                        date.setTime(date.getTime() - date.getTimezoneOffset() * 60000 - diff);
                                }
                        }

                        c = buildSimpleCondition(t1.image, t2.kind, date);
    } else if (jj_2_21(2)) {
      t3 = jj_consume_token(PATTERN);
                        boolean caseInsensitive = t3.image.charAt(t3.image.length() - 1) == 'i';
                        Pattern pattern = null;
                        try {
                                pattern = Pattern.compile(
                                        t3.image
                                                .substring(1, t3.image.length() - (caseInsensitive ? 2 : 1))
                                                .replaceAll("\u005c\u005c\u005c\u005c/", "/"),
                                        caseInsensitive ? Pattern.CASE_INSENSITIVE : 0);
                        } catch (PatternSyntaxException e) {
                                {if (true) throw new ParseException(e.getMessage());}
                        }
                        c = buildSimpleCondition(t1.image, t2.kind, pattern);
    } else if (jj_2_22(2)) {
      t3 = jj_consume_token(STRING);
                        c = buildSimpleCondition(t1.image, t2.kind, t3.image
                                .substring(1, t3.image.length() - 1)
                                .replaceAll("\u005c\u005c\u005c\u005c\u005c"", "\u005c"")
                        );
    } else if (jj_2_23(2)) {
      t3 = jj_consume_token(PACKAGE_TYPE);
                        c = buildSimpleCondition(t1.image, t2.kind, PackageType.realValueOf(t3.image));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Condition QualifiedCondition() throws ParseException {
        Token t;
        Condition c;
    t = jj_consume_token(PROPERTY_PATH);
          String qualifier = t.image;
    jj_consume_token(LEFT_BRACE);
    c = Condition();
    jj_consume_token(RIGHT_BRACE);
          {if (true) return new QualifiedCondition(qualifier, c);}
    throw new Error("Missing return statement in function");
  }

  final public Condition SubCondition() throws ParseException {
        Condition c;
    jj_consume_token(LEFT_PAREN);
    c = Condition();
    jj_consume_token(RIGHT_PAREN);
          {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_3_21() {
    if (jj_scan_token(PATTERN)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_4() {
    if (jj_scan_token(LEFT_PAREN)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_20() {
    if (jj_scan_token(DATE)) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_3()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(VERSION)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(PROPERTY_PATH)) return true;
    if (jj_scan_token(LEFT_BRACE)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(PROPERTY_PATH)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(6)) {
    jj_scanpos = xsp;
    if (jj_scan_token(7)) {
    jj_scanpos = xsp;
    if (jj_scan_token(8)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) {
    jj_scanpos = xsp;
    if (jj_scan_token(10)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) {
    jj_scanpos = xsp;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(LONG)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(AND)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_5()) {
    jj_scanpos = xsp;
    if (jj_3R_6()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_scan_token(PROPERTY_PATH)) return true;
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(DOES_NOT_MATCH)) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(MATCHES)) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(CONTAINS)) return true;
    return false;
  }

  private boolean jj_3R_7() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(PACKAGE_TYPE)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(GREATER_OR_EQUAL)) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(GREATER_THAN)) return true;
    return false;
  }
